--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,10 @@ web/app/mu-plugins/*
 web/app/upgrade
 web/app/uploads/*
 !web/app/uploads/.gitkeep
+web/app/languages/*
+!web/app/languages/.gitkeep
 !web/app/uploads/wp-migrate-db/
+
 !web/app/mu-plugins/disallow-indexing.php
 !web/app/mu-plugins/register-theme-directory.php
 !web/app/mu-plugins/bedrock-autoloader.php
