--- a/composer.json
+++ b/composer.json
@@ -11,16 +11,7 @@
   ],
   
   "config": {
-    "preferred-install": "dist",
-    "generate-salts": true
-  },
-
-  "autoload": {
-    "psr-4": {"Roots\\Bedrock\\": "scripts/Roots/Bedrock"}
-  },
-
-  "scripts": {
-    "post-root-package-install": ["Roots\\Bedrock\\Installer::addSalts"]
+    "preferred-install": "dist"
   },
 
   "require": {
