--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,13 @@
     "preferred-install": "dist"
   },
 
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "http://wpackagist.org"
+    }
+  ],
+
   "require": {
     "php": ">=5.4",
     "johnpbloch/wordpress": "4.2.2",
