--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
     "php": ">=5.4",
     "johnpbloch/wordpress": "4.2.2",
     "composer/installers": "~1.0.12",
-    "vlucas/phpdotenv": "~1.0.9",
-    "wpackagist-plugin/wp-migrate-db": "0.6.1"
+    "vlucas/phpdotenv": "~1.0.9"
   },
 
   "extra": {
