update license type in composer

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "name": "banquito/spark",
   "description": "Wordpress Stack",
   "type": "project",
-
+  "license": "MIT",
+  
   "config": {
     "preferred-install": "dist"
   },
