--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,16 @@ WP_ENV=development
 WP_HOME=http://example.com
 WP_SITEURL=http://example.com/wp
 
+DISABLE_WP_CRON=true
+
 WP_LANG=es_ES
+
+# Generate your keys here: https://api.wordpress.org/secret-key/1.1/salt/
+AUTH_KEY=generateme
+SECURE_AUTH_KEY=generateme
+LOGGED_IN_KEY=generateme
+NONCE_KEY=generateme
+AUTH_SALT=generateme
+SECURE_AUTH_SALT=generateme
+LOGGED_IN_SALT=generateme
+NONCE_SALT=generateme
