--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ DB_HOST=database_host
 
 WP_ENV=development
 WP_HOME=http://example.com
-WP_SITEURL=http://example.com/wp
+WP_SITEURL=${WP_HOME}/wp
 
 DISABLE_WP_CRON=true
 
